	 ui/gtk/gtkui.c: (De)activate IDE menu items as appropriate.
20040528 ui/gtk/gtkui.c: refactor the menu item (de)activation code.
20040528 settings.pl: Make 2048 ROM label consistent with the others.
20040528 ui/gtk/debugger.c: Fix Timex HSR and DEC register display.
20040528 periph.c: Enable/disable Interface II menu items as interface is
         enabled and disabled.
20040528 periph.c: simplify code slightly.
20040529 ui/gtk/debugger.c: display the DEC if the Timex memory capability
	 is set (as it controls dock/exrom selection). Display both DEC
	 and HSR if SE memory capability set. Display ZXCF memory control
	 port if ZXCF active.
20040531 fuse.c,utils.c: load .hdf images into the active IDE interface,
	 or ZXCF if none active.
20040531 fuse.c,settings.pl: further small changes to how .hdf images are
	 handled.
20040601 utils.c,fuse.c: Add handling of LIBSPECTRUM_CLASS_CARTRIDGE_IF2.
20040601 machines/spec_se.c: Add include <string.h> for memset.
20040601 utils.c: Fix bad merge of IF2 patch.
20040602 snapshot.c: save/restore ZXCF upload state.
20040602 snapshot.c,zxatasp.[ch]: save/restore ZXATASP state.
20040602 menu_data.c: use proper C comment rather than #if 0/#endif.
20040602 widget/{menu.c,widget.[ch]}: make Options/Peripherals work.
20040603 snapshot.c: refactor snapshot_copy_to into multiple functions.
20040603 snapshot.c: refactor snapshot_copy_from into multiple functions.
20040604 snapshot.c: restore all RAM pages present in snap; Scorpion and
	 SE snaps now more likely to work properly.
20040604 widget/Makefile.am: ensure config.h can be found when building
	 menu_data.c
20040604 ui/uijoystick.c: #include "joystick.h"
20040606 Makefile.am,ay.[ch],if2.[ch],memory.[ch],scld.[ch],slt.[ch],
	 snapshot.c,spectrum.[ch],trdos.[ch],zxatasp.[ch],zxcf.[ch],
	 z80/{Makefile.am,z80.[ch]}: move routines to (de)serialise
	 each bit of the snapshot structure into their own source files.
	 Improves encapsulation somewhat.